backend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: autograder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autograder
      role: backend
  template:
    metadata:
      labels:
        app: autograder
        role: backend
    spec:
      containers:
      - name: backend
        image: hasindrae/autograder-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
