deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autograder-deployment
  labels:
    app: autograder
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autograder
  template:
    metadata:
      labels:
        app: autograder
    spec:
      containers:
      - name: frontend
        image: hasindrae/autograder-frontend:latest
        ports:
        - containerPort: 80

      - name: backend
        image: hasindrae/autograder-backend:latest 
        ports:
        - containerPort: 8000
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: host-pvc
