frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: autograder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autograder
      role: frontend
  template:
    metadata:
      labels:
        app: autograder
        role: frontend
    spec:
      containers:
      - name: frontend
        image: hasindrae/autograder-frontend:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
