mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: autograder
  labels:
    app: mongo-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-pod
  template:
    metadata:
      labels:
        app: mongodb-pod
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: mongo-data
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: host-pvc
