backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: autograder
spec:
  selector:
    app: autograder
    role: backend  # Doit correspondre aux labels dans le déploiement backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
