flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: autograder
    role: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
