mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  namespace: autograder
spec:
  selector:
    app: mongodb-pod
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
