ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autograder-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.100.195.118"
spec:
  ingressClassName: nginx  # Spécifiez la classe d'Ingress ici
  rules:
  - host: "aca7e997df18e493e89e45aff172a1dd-58687001.us-east-1.elb.amazonaws.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
            
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
